# django-swap-user

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: publish.yml  test.yml
swap_user/: __init__.py  admin.py  apps.py  base_forms.py  base_senders.py  forms.py  helpers.py  otp_senders.py  otp_services.py  otp_sites.py  senders.py  services.py  settings.py  views.py
swap_user/common/: helpers.py
swap_user/email/: __init__.py  admin.py  apps.py  forms.py  models.py
swap_user/email/migrations/: 0001_initial.py  0002_update_verbose_name.py
swap_user/managers/: email.py  phone.py
swap_user/migrations/: 0001_initial.py
swap_user/models/: __init__.py  email.py
swap_user/named_email/: __init__.py  admin.py  apps.py  forms.py  models.py
swap_user/named_email/migrations/: 0002_update_verbose_name.py
swap_user/otp/: forms.py  senders.py  services.py  sites.py  views.py
swap_user/tests/: conftest.py  test_admin.py  test_forms.py
swap_user/to_email/: __init__.py  admin.py  apps.py  base_managers.py  base_models.py  forms.py  managers.py  models.py
swap_user/to_email_otp/: __init__.py  apps.py  auth_backend.py  base_managers.py  base_models.py  forms.py  managers.py  models.py  otp_forms.py  senders.py  services.py  sites.py  views.py
swap_user/to_named_email/: __init__.py  admin.py  apps.py  forms.py  models.py
swap_user/to_phone/: __init__.py  admin.py  apps.py  base_managers.py  base_models.py  forms.py  managers.py  models.py
swap_user/to_phone_otp/: __init__.py  admin.py  apps.py  auth_backend.py  base_managers.py  base_models.py  forms.py  helpers.py  managers.py  models.py
(+8 files in other folders)
