[tool.poetry]
name = "django-swap-user"
version = "0.1.0"
description = "Simple and flexible way to swap default Django User"
authors = ["Artem Innokentiev <artinnok@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
